--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,14 @@
                     <ul>
                         <li><a href="#"> Receive Local Goods</a> </li>
                         <li><a href="#"> Supply / Transfer</a></li>
-                        <li><a href="#"> Stock  Items</a></li>
+                        <li><a href="#"> Stock  Items</a>
+                            <ul class="stkitems">
+                                <li><a> Add / Edit Stock Item </a></li>
+                                <li><a> Price Change </a></li>
+                                <li><a> Stock Reconciliation </a></li>
+                                <li><a> Stock REport </a></li>
+                            </ul>                        
+                        </li>
                         <li><a href="#"> Invoice</a></li>
                         <li><a href="#"> POS Reports</a></li>
                     </ul>
@@ -26,40 +33,56 @@
                         <li><a href="#"> New Invoice</a> </li>
                         <li><a href="#"> Old Invoice</a></li>
                         <li><a href="#"> Service Items</a></li>
-                        <li><a href="#"> Reports</a></li>
+                        <li><a href="http://app.bolaapps.com/weijabola/" target=" "> Bola Weija</a></li>
                     </ul>                
                 </li>
-                <li><a href="#">Imports</a></li>
-                <li><a href="#">General Books</a></li>
-                <li><a href="#">Staff</a></li>
-                <li><a href="#">Expense Control</a></li>
-                <li><a href="#">Utilities</a></li>        
+                <li><a href="#">Imports</a>
+                    <ul>
+                        <li><a href="#"> Orders </a> </li>
+                        <li><a href="#"> Reports </a></li>
+                        <li><a href="#"> Exchnge Rate</a></li>
+                    </ul>                                
+                </li>
+                <li><a href="#">General Books</a>
+                    <ul>
+                        <li><a href="#"> Banks </a> </li>
+                        <li><a href="#"> Creditors Control </a></li>
+                        <li><a href="#"> Cash Control </a></li>
+                        <li><a href="#"> Debtors Cntrol </a></li>
+                        <li><a href="#"> Fix Assets </a></li>
+                        <li><a href="#"> Bills Control </a></li>
+                        <li><a href="#"> VAT Reports </a></li>                        
+                    </ul>                
+                </li>
+                <li><a href="#">Staff</a>
+                    <ul>
+                        <li><a href="#"> Receive Local Goods</a> </li>
+                        <li><a href="#"> Supply / Transfer</a></li>
+                        <li><a href="#"> Stock  Items</a></li>
+                        <li><a href="#"> Invoice</a></li>
+                        <li><a href="#"> POS Reports</a></li>
+                    </ul>                
+                </li>
+                <li><a href="#">Expense Control</a>
+                    <ul>
+                        <li><a href="#"> Receive Local Goods</a> </li>
+                        <li><a href="#"> Supply / Transfer</a></li>
+                        <li><a href="#"> Stock  Items</a></li>
+                        <li><a href="#"> Invoice</a></li>
+                        <li><a href="#"> POS Reports</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Utilities</a>
+                    <ul>
+                        <li><a href="#"> Receive Local Goods</a> </li>
+                        <li><a href="#"> Supply / Transfer</a></li>
+                        <li><a href="#"> Stock  Items</a></li>
+                        <li><a href="#"> Invoice</a></li>
+                        <li><a href="#"> POS Reports</a></li>
+                    </ul>
+                </li>        
             </ul>
         </nav>
-
-<!--        <div class="dropdown">
-            <button>food</button>
-                <div class="content">
-                    <a href=""> </a>
-                </div>
-        </div>
-        <button class="Stok-Manager">
-            Stock Manager
-        </button>
-
-        <button class="services">
-            Services
-        </button>
-
-        <P>
-            <button class="Imports">
-                Imports
-            </button>
-
-            <button class="general-ledgers">
-                General Ledgers
-            </button>
-        </P> -->
     </body>
 </html>
 
