--- a/dashboard.html
+++ b/dashboard.html
@@ -2,7 +2,7 @@
 
 <html> <!-- All HTML codes must be within the HTML tag-->
     <head> <!--EVrything not visible on the page will be in the heaer tag-->
-        <title> Kospack Shop Manager Plus 1.0.0</title>
+        <title> Kospack Shop  Manager Plus 1.0.0</title>
 
         <link rel="stylesheet" type="text/CSS" href="kosstyles.css">
 
@@ -14,14 +14,20 @@
             <ul>
                 <li><a href="#">Stock Manager</a>
                     <ul>
-                        <li><a href="#"> Receive Local Goods</a> </li>
+                        <li><a href="#"> Receive Local Goods</a> 
+                            <ul>
+                                <li><a href="#"> New Entries </a></li>
+                                <li><a href="#"> Good Returned </a></li>
+                                <li><a href="#"> Report </a></li>
+                            </ul>
+                        </li>
                         <li><a href="#"> Supply / Transfer</a></li>
                         <li><a href="#"> Stock  Items</a>
-                            <ul class="stkitems">
-                                <li><a> Add / Edit Stock Item </a></li>
-                                <li><a> Price Change </a></li>
-                                <li><a> Stock Reconciliation </a></li>
-                                <li><a> Stock REport </a></li>
+                            <ul>
+                                <li><a href="#"> Add / Edit Stock Item </a></li>
+                                <li><a href="#"> Price Change </a></li>
+                                <li><a href="#"> Stock Reconciliation </a></li>
+                                <li><a href="#"> Stock REport </a></li>
                             </ul>                        
                         </li>
                         <li><a href="#"> Invoice</a></li>
@@ -83,7 +89,10 @@
                 </li>        
             </ul>
         </nav>
-    </body>
+
+        <p class="kosmaintext">
+            Kospack <u>Shop</u> <strong class="strong-blue"> Manager <u> Plus 1.0.0</u> </strong> 
+        </p>
 </html>
 
 
