--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body> <!-- EVerything visible on the page must be withing the body tag-->        
-
+        <img src="images/Excavator1.webp">
         <nav>
             <ul>
                 <li><a href="#">Stock Manager</a>
@@ -22,9 +22,9 @@
                             </ul>
                         </li>
                         <li><a href="#"> Supply / Transfer</a></li>
-                        <li><a href="#"> Stock  Items</a>
+                        <li><a href="addeditstock.html" target=" "> Stock  Items</a>
                             <ul>
-                                <li><a href="#"> Add / Edit Stock Item </a></li>
+                                <li><a href="addeditstock.html" target=" "> Add / Edit Stock Item </a></li>
                                 <li><a href="#"> Price Change </a></li>
                                 <li><a href="#"> Stock Reconciliation </a></li>
                                 <li><a href="#"> Stock REport </a></li>
