--- a/addeditstock.html
+++ b/addeditstock.html
@@ -13,6 +13,17 @@
         </style>
     </head>
     <body>
+        <input type="button" placeholder="Click">
+        <input type="text" placeholder="Search">
+        <p><input type="checkbox" placeholder="press">
+        <input type="date" placeholder="today">
+        <input type="datetime">
+        <input type="email" placeholder="email">
+        <input type="file" aria-placeholder="Select file">
+        <input type="password" placeholder="Type Password">
+        <input type="color" name="" id="">
+        <!--<input type="image" src="/images/Excavator1.webp> -->
+        </p>
         <img class="Cashew1" src="/images/Cashew1.webp">
     </body>
 </html>
