--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body> <!-- EVerything visible on the page must be withing the body tag-->        
-        <img src="images/Excavator1.webp">
+        <img class="Excavator1" src="images/Excavator1.webp">
         <nav>
             <ul>
                 <li><a href="#">Stock Manager</a>
